--- a/contact.html
+++ b/contact.html
@@ -41,12 +41,12 @@
             </div>
         </div>
     </nav>
-    <!-- ======= Hero Section ======= -->
+    <!-- ======= Contact Form ======= -->
     <main id="hero">
         <div class="container col-xxl-8 px-4 py-5">
            
             <h1 class="text-center mb-3">Contact Me</h1>
-            <form action="#">
+            <form name="ToDo-ContatForm" method="POST" data-netlify-recaptcha="true" data-netlify="true" >
                 <div class="row mb-1">
                     <div class="col">
                         <label class="form-label">First Name</label>
@@ -85,6 +85,7 @@
                             aria-label="Message" required></textarea>
                     </div>
                 </div>
+                <div data-netlify-recaptcha="true"></div>
                 <button type="submit" class="btn btn-primary mt-2">Submit</button>
             </form>
                 <div class="col-10 col-sm-8 col-lg-6">
