Work To Be Done

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <p class="lead">A simple, fast, and scalable to do system that helps you manage your time easily
                         and always be on time</p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                        <button type="button" onclick="addTask()" class="btn btn-warning btn-lg px-4 me-md-2">Add a Task</button>
+                        <button type="button" onclick="addTask()" class="btn btn-warning btn-lg px-4 me-md-2">Add Work to Be Done</button>
                         <!--<button type="button" class="btn btn-outline-warning btn-lg px-4">About</button>-->
                     </div>
                     
